--- a/book/package.json
+++ b/book/package.json
@@ -1,10 +1,11 @@
 {
   "name": "manual-apache",
-  "version": "1.0.3",
-  "description": "Apache 手册",
+  "version": "1.0.4",
+  "description": "Apache HTTP Server 是一个开放源码的网页服务器软件。",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gitbook serve ./ ./book"
   },
   "repository": {
     "type": "git",
